# tauri-filer

./: .gitignore  CLAUDE.md  CREDITS.md  LICENSE  README.en.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
.githooks/: pre-push
.github/workflows/: release.yml  test.yml
docs/plans/: cuddly-waddling-rainbow.md  eager-spinning-bunny.md  magical-noodling-salamander.md
e2e/: app.spec.ts  performance.spec.ts  screenshots.spec.ts  settings.spec.ts  transparency.spec.ts
src/: App.tsx  index.css  main.tsx  security.test.ts  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  terminal.rs
src-tauri/src/commands/: clipboard.rs  fs_ops.rs  mod.rs  updater.rs
src-tauri/src/models/: file_entry.rs
src/commands/: clipboard-commands.test.ts  clipboard-commands.ts  fs-commands.test.ts  fs-commands.ts  terminal-commands.ts  updater-commands.test.ts  updater-commands.ts
src/components/: AddressBar.tsx  AppLayout.tsx  Breadcrumb.tsx  ContextMenu.test.tsx  ContextMenu.tsx  CopyConflictDialog.tsx  DeleteConfirmDialog.tsx  EmptyState.tsx  ErrorBoundary.tsx  FileCard.test.tsx  FileCard.tsx  FileIcon.tsx  FileListSkeleton.tsx  FilePreviewDialog.tsx  FileRow.test.tsx  FileRow.tsx  GridView.tsx  ListView.tsx  NewFolderDialog.tsx  RenameDialog.tsx  SearchDialog.tsx  SettingsDialog.test.tsx  SettingsDialog.tsx  Sidebar.tsx  Spinner.tsx  StatusBar.tsx  TabBar.tsx  TerminalPane.test.tsx  TerminalPane.tsx  Toolbar.tsx  UpdateNotification.tsx
src/hooks/: use-context-menu.ts  use-drag-drop.ts  use-keyboard-shortcuts.ts  use-mouse-navigation.test.ts  use-mouse-navigation.ts  use-navigation.ts  use-os-drop.test.ts  use-os-drop.ts
src/i18n/: i18n.test.ts  index.ts  test-helper.ts
src/stores/: bookmark-store.test.ts  bookmark-store.ts  clipboard-store.test.ts  clipboard-store.ts  file-store.test.ts  file-store.ts  tab-store.test.ts  tab-store.ts  ui-store.test.ts  ui-store.ts
src/themes/: apply-theme.ts  atom-one-light.ts  ayu-dark.ts  ayu-light.ts  ayu-mirage.ts  catppuccin-frappe.ts  catppuccin-latte.ts  catppuccin-macchiato.ts  catppuccin-mocha.ts  default.ts  dracula.ts  everforest.ts  github-dark.ts  github-light.ts  gruvbox-dark.ts  gruvbox-light.ts  (+13 more)
(+23 files in other folders)
