[package]
name = "tauri-filer"
version = "0.1.6"
description = "Desktop File Manager"
authors = ["win-chanma"]
license = "MIT"
edition = "2021"

[lib]
name = "tauri_filer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
trash = "5"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
portable-pty = "0.8"

[dev-dependencies]
tempfile = "3"
