[package]
name = "tauri-filer"
version = "0.3.0"
description = "Desktop File Manager"
authors = ["win-chanma"]
license = "MIT"
edition = "2021"

[lib]
name = "tauri_filer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
trash = "5"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
portable-pty = "0.8"
tauri-plugin-updater = "2"
ureq = { version = "2", features = ["json"] }
tauri-plugin-drag = "2"

[target.'cfg(windows)'.dependencies]
clipboard-win = "5"

[dev-dependencies]
tempfile = "3"
